objects/PL_MD__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Display Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Allocation_Item__c</fullName>
        <label>Cost Allocation Item</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Allocation__c</fullName>
        <label>Cost Allocation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Credit_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MD_Type__c</fullName>
        <label>Master Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Allocation</fullName>
                </value>
                <value>
                    <fullName>Product Group</fullName>
                </value>
                <value>
                    <fullName>Product Summary</fullName>
                </value>
                <value>
                    <fullName>CreditType2PS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Overhead__c</fullName>
        <label>Third Party Overhead</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translated_Value__c</fullName>
        <label>Translated Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>P&amp;L Master Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pillar__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD_Type__c</field>
            <operation>equals</operation>
            <value>Product Summary</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Allocation_Cost</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Allocation__c</field>
            <operation>equals</operation>
            <value>Allocation Cost</value>
        </filters>
        <label>Allocation Cost</label>
    </listViews>
    <listViews>
        <fullName>COGS</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Allocation__c</field>
            <operation>equals</operation>
            <value>COGS</value>
        </filters>
        <label>COGS</label>
    </listViews>
    <listViews>
        <fullName>Direct_Fixed</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Allocation__c</field>
            <operation>equals</operation>
            <value>Direct Fixed</value>
        </filters>
        <label>Direct Fixed</label>
    </listViews>
    <listViews>
        <fullName>Product_Group</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pillar__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <label>Product Group</label>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Allocation__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Sales</label>
    </listViews>
    <listViews>
        <fullName>Variable_Costs</fullName>
        <columns>NAME</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>MD_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pillar__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Allocation__c</field>
            <operation>equals</operation>
            <value>Variable Cost</value>
        </filters>
        <label>Variable Costs</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P&amp;L Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>